@@ -1,4 +1,8 @@
 =======================
 * SAMPLE SOURCE
 =======================
-Till now, we have neither re-distributable nor public downloadable sample files.
+	1d-1.spe
+	1d-2.spe
+	1d-3.spe
+are sample files from Pablo Bianucci <pbian@physics.utexas.edu> with re-distribution right granted.
+
